leo3/tests/ui/leanclass_generic_method.stderr
error: Generic methods are not supported yet
 --> tests/ui/leanclass_generic_method.rs:7:11
  |
7 |     fn bad<T>(&self, value: T) {
  |           ^^^
